<resources>
    <string name="app_name">SEGEN Employee Tracker</string>
    <string name="title_activity_nav">nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_demonav">demonav</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="format_date_1">dd/MM/yyyy</string>
    <string name="format_date_2">dd/MM/yyyy HH:mm</string>
    <string name="format_date_3">HH:mm</string>
    <string name="format_date_sb">yyyy-MM-dd HH:mm:ss</string>
    <string name="format_date_sb2">yyyy-MM-dd HH:mm:ss z</string>
    <string name="content_description">placeholder</string>
    <string name="credPref">credential_preferences</string>
    <string name="emailPref">email</string>
    <string name="passPref">pass</string>
    <string name="loginIdPref">loginId</string>
    <string name="posisiPref">posisi</string>
    <string name="login">http://192.168.0.3:8081/api/mar/login</string>
    <string name="homeStat">http://192.168.0.3:8081/api/mar/home</string>
    <string name="attendancePost">http://192.168.0.3:8081/api/mar/att</string>
    <string name="attendanceList">http://192.168.0.3:8081/api/mar/att/list</string>
    <string name="getTask">http://192.168.0.3:8081/api/mar/task</string>
    <string name="getTaskDetail">http://192.168.0.3:8081/api/mar/task/detail</string>
    <string name="finishTask">http://192.168.0.3:8081/api/mar/task/finish</string>
    <string name="submitDepositoGet">http://192.168.0.3:8081/api/mar/submit/deposito</string>
    <string name="submitDepositoGetDetail">http://192.168.0.3:8081/api/mar/submit/deposito/detail</string>
    <string name="submitDepositoCreate">http://192.168.0.3:8081/api/mar/submit/deposito/create</string>
    <string name="submitDepositoEdit">http://192.168.0.3:8081/api/mar/submit/deposito/edit</string>
    <string name="submitDepositoDelete">http://192.168.0.3:8081/api/mar/submit/deposito/delete</string>
    <string name="submitDepositoSend">http://192.168.0.3:8081/api/mar/submit/deposito/send</string>
    <string name="submitLoanGet">http://192.168.0.3:8081/api/mar/submit/loan</string>
    <string name="submitLoanGetDetail">http://192.168.0.3:8081/api/mar/submit/loan/detail</string>
    <string name="submitLoanCreate">http://192.168.0.3:8081/api/mar/submit/loan/create</string>
    <string name="submitLoanEdit">http://192.168.0.3:8081/api/mar/submit/loan/edit</string>
    <string name="submitLoanDelete">http://192.168.0.3:8081/api/mar/submit/loan/delete</string>
    <string name="submitLoanSend">http://192.168.0.3:8081/api/mar/submit/loan/send</string>
    <string name="getMarketing">http://192.168.0.3:8081/api/mar</string>
    <string name="getCollection">http://192.168.0.3:8081/api/manager/task/collection</string>
    <string name="getTaskManager">http://192.168.0.3:8081/api/manager/task</string>
    <string name="getTaskDetailManager">http://192.168.0.3:8081/api/manager/task/detail</string>
    <string name="createTaskManager">http://192.168.0.3:8081/api/manager/task/create</string>
    <string name="editTaskManager">http://192.168.0.3:8081/api/manager/task/edit</string>
    <string name="deleteTaskManager">http://192.168.0.3:8081/api/manager/task/delete</string>
    <string name="sendTaskManager">http://192.168.0.3:8081/api/manager/task/send</string>
    <string name="finishTaskManager">http://192.168.0.3:8081/api/manager/task/finish</string>
    <string name="rejectTaskManager">http://192.168.0.3:8081/api/manager/task/reject</string>
    <string name="submitDepositoGetManager">http://192.168.0.3:8081/api/manager/submit/deposito</string>
    <string name="submitDepositoGetDetailManager">http://192.168.0.3:8081/api/manager/submit/deposito/detail</string>
    <string name="submitDepositoFinishManager">http://192.168.0.3:8081/api/manager/submit/deposito/finish</string>
    <string name="submitDepositoRejectManager">http://192.168.0.3:8081/api/manager/submit/deposito/reject</string>
    <string name="submitLoanGetManager">http://192.168.0.3:8081/api/manager/submit/loan</string>
    <string name="submitLoanGetDetailManager">http://192.168.0.3:8081/api/manager/submit/loan/detail</string>
    <string name="submitLoanFinishManager">http://192.168.0.3:8081/api/manager/submit/loan/finish</string>
    <string name="submitLoanRejectManager">http://192.168.0.3:8081/api/manager/submit/loan/reject</string>
    <string name="label_informasi_tambahan_dialog_title">Informasi Tambahan</string>
    <string name="label_loan_dialog_title">Produk Pinjaman</string>
    <string-array name="list_produk_loan">
        <item>Installment</item>
        <item>Kolektif</item>
        <item>Karyawan</item>
        <item>Demand Loan</item>
        <item>Mikro</item>
    </string-array>
    <string name="label_deposito_produk_dialog_title">Produk Deposito</string>
    <string-array name="list_produk_deposito">
        <item>1 Bulan</item>
        <item>3 Bulan</item>
        <item>6 Bulan</item>
        <item>12 Bulan</item>
    </string-array>
    <string name="label_deposito_tipe_dialog_title">Tipe Deposito</string>
    <string-array name="list_tipe_deposito">
        <item>AROP (Bunga Transfer)</item>
        <item>AROPB</item>
    </string-array>
    <string name="label_jaminan_kepemilikan_dialog_title">Kepemelikan Jaminan</string>
    <string-array name="list_kepemilikan_jaminan">
        <item>Milik Sendiri</item>
        <item>Bukan Milik Sendiri</item>
    </string-array>
    <string name="label_jaminan_tipe_dialog_title">Tipe Jaminan</string>
    <string-array name="list_tipe_jaminan">
        <item>BPKB</item>
        <item>Sertifikat</item>
        <item>Other</item>
    </string-array>
    <string name="status_tugas">Status</string>
    <string-array name="status_tugas_detail">
        <item>ALL</item>
        <item>Draft</item>
        <item>To Do</item>
        <item>Review</item>
        <item>Finish</item>
    </string-array>
    <string name="status_sub">Status</string>
    <string-array name="status_sub_detail">
        <item>ALL</item>
        <item>Draft</item>
        <item>Diajukan</item>
        <item>Finish</item>
    </string-array>
    <string name="Email">Email</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="Lupa_Password">Lupa Password</string>
    <string name="Login">Login</string>
    <string name="AppVersion">App Version 1.0.1</string>
    <string name="label_sub_sec_home">Beranda</string>
    <string name="label_desc_tugas_col">Tugas Collection Anda :  </string>
    <string name="label_desc_tugas_psl">Tugas Pribadi Anda :  </string>
    <string name="plc_nama">Hi, </string>
    <string name="plc_jabatan"> </string>
    <string name="plc_cabang">SEGEN Surabaya</string>
    <string name="SEGEN">SEGEN</string>
    <string name="logout">Logout</string>
    <string name="label_sub_sec_att">Absen</string>
    <string name="label_list_att">List Absen</string>
    <string name="label_att_true">Anda Sudah Absen Hari Ini</string>
    <string name="label_att_false">Anda Belum Absen Hari Ini</string>
    <string name="label_sub_sec_task">Tugas</string>
    <string name="label_sub_sec_task_detail">Detil Tugas</string>
    <string name="label_sub_sec_loan">Laporan Pinjaman Baru</string>
    <string name="label_sub_sec_loan_detail">Detil Pinjaman Baru</string>
    <string name="label_sub_sec_loan_create">Buat Pinjaman Baru</string>
    <string name="label_sub_sec_loan_edit">Ubah Pinjaman Baru</string>
    <string name="label_sub_sec_deposito">Laporan Deposito Baru</string>
    <string name="label_sub_sec_deposito_detail">Detil Deposito Baru</string>
    <string name="label_sub_sec_deposito_create">Buat Deposito Baru</string>
    <string name="label_sub_sec_deposito_edit">Ubah Deposito Baru</string>
</resources>