<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="all">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/label_sub_sec_home" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_baseline_watch_later_24"
            android:title="@string/label_sub_sec_att" />
        <!--
    <item
        android:id="@+id/nav_achievement"
        android:icon="@drawable/ic_menu_gallery"
        android:title="Achievement" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="History" />
        -->

        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_baseline_sticky_note_2_24"
            android:title="@string/label_sub_sec_task" />
        <!--
        <item
            android:id="@+id/nav_personal"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/label_sub_sec_task" />
         -->

        <item
            android:id="@+id/nav_deposito_submit"
            android:icon="@drawable/ic_baseline_library_add_24"
            android:title="@string/label_sub_sec_deposito" />
        <item
            android:id="@+id/nav_loan_submit"
            android:icon="@drawable/ic_baseline_playlist_add_check_24"
            android:title="@string/label_sub_sec_loan" />

        <item
            android:id="@+id/logout"
            android:title="LOGOUT" />

    </group>

</menu>