<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coba_nav"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.kd.fragment.home.Home01Profile"
        android:label="@string/label_sub_sec_home"
        tools:layout="@layout/frag_11_profile">
        <action
            android:id="@+id/action_nav_home_to_nav_collection"
            app:destination="@id/nav_collection" />
        <action
            android:id="@+id/action_nav_home_to_nav_attendance"
            app:destination="@id/nav_attendance" />
    </fragment>

    <fragment
        android:id="@+id/nav_attendance"
        android:name="com.example.kd.fragment.home.Home02Attendance"
        android:label="@string/label_sub_sec_att"
        tools:layout="@layout/frag_12_attendance">
        <action
            android:id="@+id/action_nav_attendance_to_attendanceList"
            app:destination="@id/attendanceList" />
    </fragment>

    <fragment
        android:id="@+id/nav_achievement"
        android:name="com.example.kd.fragment.home.Home03Achievement"
        android:label="Achievement"
        tools:layout="@layout/frag_13_achievement"/>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.kd.fragment.home.Home04History"
        android:label="History"
        tools:layout="@layout/frag_14_history"/>

    <fragment
        android:id="@+id/nav_collection"
        android:name="com.example.kd.fragment.marketing.task.Task01Collection"
        android:label="@string/label_sub_sec_task"
        tools:layout="@layout/frag_21_collection_01" >
        <action
            android:id="@+id/action_nav_collection_to_task01CollectionDetail"
            app:destination="@id/task01CollectionDetail" />
        <action
            android:id="@+id/action_nav_collection_to_task02TaskDetail"
            app:destination="@id/task02TaskDetail" />
    </fragment>

    <fragment
        android:id="@+id/task01CollectionDetail"
        android:name="com.example.kd.fragment.marketing.task.collection.detail.Task01CollectionDetail"
        android:label="@string/label_sub_sec_task_detail"
        tools:layout="@layout/frag_21_collection_02_detail" >
        <argument
            android:name="value"
            app:argType="string"
            android:defaultValue="The Value" />
    </fragment>

    <fragment
        android:id="@+id/task02TaskDetail"
        android:name="com.example.kd.fragment.marketing.task.personal.detail.Task02TaskDetail"
        android:label="@string/label_sub_sec_task_detail"
        tools:layout="@layout/frag_22_collection_02_detail" >
        <argument
            android:name="value"
            app:argType="string"
            android:defaultValue="The Value" />
        <action
            android:id="@+id/action_task02TaskDetail_to_file"
            app:destination="@id/file" />
    </fragment>

    <fragment
        android:id="@+id/nav_deposito_submit"
        android:name="com.example.kd.fragment.marketing.submission.deposito.core.Sub32Deposito"
        android:label="@string/label_sub_sec_deposito"
        tools:layout="@layout/fragment_sub32_deposito_list" >
        <action
            android:id="@+id/action_nav_deposito_submit_to_sub02DepositoDetail"
            app:destination="@id/sub02DepositoDetail" />
        <action
            android:id="@+id/action_nav_deposito_submit_to_sub32DepositoCreate"
            app:destination="@id/sub32DepositoCreate" />
    </fragment>

    <fragment
        android:id="@+id/nav_loan_submit"
        android:name="com.example.kd.fragment.marketing.submission.loan.core.Sub31Loan"
        android:label="@string/label_sub_sec_loan"
        tools:layout="@layout/fragment_sub31_loan_list" >
        <action
            android:id="@+id/action_nav_loan_submit_to_sub01LoanDetail"
            app:destination="@id/sub01LoanDetail" />
        <action
            android:id="@+id/action_nav_loan_submit_to_sub31LoanCreate"
            app:destination="@id/sub31LoanCreate" />
    </fragment>

    <fragment
        android:id="@+id/sub01LoanDetail"
        android:name="com.example.kd.fragment.marketing.submission.loan.detail.Sub31LoanDetail"
        android:label="@string/label_sub_sec_loan_detail"
        tools:layout="@layout/sub31_loan_detail_fragment" >
        <argument
            android:name="idDetailLoanSubmission"
            app:argType="string"
            android:defaultValue="id" />
        <action
            android:id="@+id/action_sub01LoanDetail_to_sub31LoanEdit"
            app:destination="@id/sub31LoanEdit" />
    </fragment>
    <fragment
        android:id="@+id/sub02DepositoDetail"
        android:name="com.example.kd.fragment.marketing.submission.deposito.detail.Sub32DepositoDetail"
        android:label="@string/label_sub_sec_deposito_detail"
        tools:layout="@layout/sub32_deposito_detail_fragment" >
        <argument
            android:name="idDetailDepositoSubmisson"
            app:argType="string"
            android:defaultValue="id"/>
        <action
            android:id="@+id/action_sub02DepositoDetail_to_sub32DepositoEdit"
            app:destination="@id/sub32DepositoEdit" />
    </fragment>
    <fragment
        android:id="@+id/sub31LoanCreate"
        android:name="com.example.kd.fragment.marketing.submission.loan.core.Sub31LoanCreate"
        android:label="@string/label_sub_sec_loan_create"
        tools:layout="@layout/sub31_loan_create_fragment" />



    <fragment
        android:id="@+id/sub31LoanEdit"
        android:name="com.example.kd.fragment.marketing.submission.loan.core.Sub31LoanEdit"
        android:label="@string/label_sub_sec_loan_edit"
        tools:layout="@layout/sub31_loan_edit_fragment" >
        <argument
            android:name="idDetailLoanSubmisson"
            app:argType="string"
            android:defaultValue="id" />
    </fragment>

    <fragment
        android:id="@+id/sub32DepositoCreate"
        android:name="com.example.kd.fragment.marketing.submission.deposito.core.Sub32DepositoCreate"
        android:label="@string/label_sub_sec_deposito_create"
        tools:layout="@layout/sub32_deposito_create_fragment" />
    <fragment
        android:id="@+id/sub32DepositoEdit"
        android:name="com.example.kd.fragment.marketing.submission.deposito.core.Sub32DepositoEdit"
        android:label="@string/label_sub_sec_deposito_edit"
        tools:layout="@layout/sub32_deposito_edit_fragment" >
        <argument
            android:name="idDetailDepositoSubmisson"
            app:argType="string"
            android:defaultValue="id" />
    </fragment>
    <fragment
        android:id="@+id/file"
        android:name="com.example.kd.fragment.marketing.task.file.file"
        android:label="Detil File"
        tools:layout="@layout/fragment_file_list" />
    <fragment
        android:id="@+id/attendanceList"
        android:name="com.example.kd.fragment.home.attendance.AttendanceList"
        android:label="List Absen"
        tools:layout="@layout/fragment_attendance_list_list" />

    <fragment
        android:id="@+id/nav_task_manager"
        android:name="com.example.kd.fragment.manager.task.core.list.TaskManager"
        android:label="Manajemen Tugas"
        tools:layout="@layout/fragment_task_manager_list">
        <action
            android:id="@+id/action_taskManager_to_taskManagerPersonalDetail"
            app:destination="@id/taskManagerPersonalDetail" />
        <action
            android:id="@+id/action_taskManager_to_taskManagerCollectionDetail"
            app:destination="@id/taskManagerCollectionDetail" />
        <action
            android:id="@+id/action_taskManager_to_taskManagerCrudSelect"
            app:destination="@id/taskManagerCrudSelect" />
    </fragment>
    <fragment
        android:id="@+id/taskManagerCrudSelect"
        android:name="com.example.kd.fragment.manager.task.core.crud.TaskManagerCrudSelect"
        android:label="Buat Tugas"
        tools:layout="@layout/fragment_task_manager_crud_select" >
        <action
            android:id="@+id/action_taskManagerCrudSelect_to_taskManagerCollectionCreate"
            app:destination="@id/taskManagerCollectionCreate" />
        <action
            android:id="@+id/action_taskManagerCrudSelect_to_taskManagerPersonalCreate"
            app:destination="@id/taskManagerPersonalCreate" />
    </fragment>
    <fragment
        android:id="@+id/taskManagerPersonalDetail"
        android:name="com.example.kd.fragment.manager.task.core.detail.TaskManagerPersonalDetail"
        android:label="Detil Tugas Personal"
        tools:layout="@layout/fragment_task_manager_personal_detail">
        <action
            android:id="@+id/action_taskManagerPersonalDetail_to_taskManagerPersonalEdit"
            app:destination="@id/taskManagerPersonalEdit" />
        <argument
            android:name="idtask"
            android:defaultValue="idtask"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/taskManagerCollectionDetail"
        android:name="com.example.kd.fragment.manager.task.core.detail.TaskManagerCollectionDetail"
        android:label="Detil Tugas Collection"
        tools:layout="@layout/fragment_task_manager_collection_detail">
        <action
            android:id="@+id/action_taskManagerCollectionDetail_to_taskManagerCollectionEdit"
            app:destination="@id/taskManagerCollectionEdit" />
        <argument
            android:name="idtask"
            android:defaultValue="idtask"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/taskManagerCollectionCreate"
        android:name="com.example.kd.fragment.manager.task.core.crud.collection.TaskManagerCollectionCreate"
        android:label="Buat Tugas Collection"
        tools:layout="@layout/fragment_task_manager_collection_create" />
    <fragment
        android:id="@+id/taskManagerPersonalCreate"
        android:name="com.example.kd.fragment.manager.task.core.crud.personal.TaskManagerPersonalCreate"
        android:label="Buat Tugas Personal"
        tools:layout="@layout/fragment_task_manager_personal_create" />
    <fragment
        android:id="@+id/taskManagerCollectionEdit"
        android:name="com.example.kd.fragment.manager.task.core.crud.collection.TaskManagerCollectionEdit"
        android:label="fragment_task_manager_collection_edit"
        tools:layout="@layout/fragment_task_manager_collection_edit" />
    <fragment
        android:id="@+id/taskManagerPersonalEdit"
        android:name="com.example.kd.fragment.manager.task.core.crud.personal.TaskManagerPersonalEdit"
        android:label="Edit Tugas Personal"
        tools:layout="@layout/fragment_task_manager_personal_edit">
        <argument
            android:name="idtask"
            android:defaultValue="idtask"
            app:argType="string" />
    </fragment>

</navigation>