<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:alignContent="stretch"
        app:flexDirection="column">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="row"
            app:layout_flexBasisPercent="10%">

            <ImageView
                android:id="@+id/logo_vis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/content_description"
                android:scaleType="centerCrop"
                app:layout_flexBasisPercent="50%" />
        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="column"
            app:justifyContent="center"
            app:layout_flexBasisPercent="50%">

            <com.google.android.material.textview.MaterialTextView
                style="@style/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/username" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="15dp"
                app:endIconMode="custom"
                app:endIconTint="#fafbbd">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input"
                    style="@style/edittext"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/Password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/t1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="15dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass_input"
                    style="@style/edittext"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:flexDirection="row">

                <!--
                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:flexDirection="column">

                    <TextView
                        android:id="@+id/forget_pass"
                        style="@style/textview"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentBottom="true"
                        android:text="@string/Lupa_Password"
                        android:textAllCaps="false" />

                </com.google.android.flexbox.FlexboxLayout>
                -->
                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:alignItems="flex_end"
                    app:flexDirection="column">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/log_in"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentBottom="true"
                        android:text="@string/Login"
                        android:textAllCaps="false" />

                </com.google.android.flexbox.FlexboxLayout>

            </com.google.android.flexbox.FlexboxLayout>


        </com.google.android.flexbox.FlexboxLayout>


        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alignItems="flex_end"
            app:flexDirection="row"
            app:justifyContent="center"
            app:layout_flexBasisPercent="35%">

            <TextView
                style="@style/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/AppVersion"
                android:textAlignment="center"
                android:textSize="15sp" />

        </com.google.android.flexbox.FlexboxLayout>


    </com.google.android.flexbox.FlexboxLayout>


</LinearLayout>